[gd_scene load_steps=2 format=3 uid="uid://bss8fskay3c8w"]

[ext_resource type="Script" path="res://Scripts/build_entry_widget.gd" id="1_8tbcj"]

[node name="build_entry_widget" type="PanelContainer"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_8tbcj")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 8

[node name="HBox_EntryContent" type="HBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="Text_BuildName" type="RichTextLabel" parent="MarginContainer/HBox_EntryContent"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
text = "Build Name"
fit_content = true
autowrap_mode = 0

[node name="ButtonLaunch" type="Button" parent="MarginContainer/HBox_EntryContent"]
layout_mode = 2
text = "Launch"

[connection signal="pressed" from="MarginContainer/HBox_EntryContent/ButtonLaunch" to="." method="_on_button_launch_pressed"]
